--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "nanvon",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "echarts": "^5.4.3",
+    "vue": "^3.3.6"
+  }
 }
